--- a/css/demo-store.css
+++ b/css/demo-store.css
@@ -174,7 +174,7 @@
 }
 
 /* Brand Stores Section */
-.brand-stores-section {
+/* .brand-stores-section {
     padding: 60px 0;
     background-color: white;
 }
@@ -209,7 +209,7 @@
     filter: grayscale(0);
     opacity: 1;
     transform: scale(1.1);
-}
+} */
 
 /* Media Queries */
 @media (max-width: 1024px) {
